--- a/MSL/Properties/Resources.resx
+++ b/MSL/Properties/Resources.resx
@@ -121,4 +121,7 @@
   <data name="LG전자" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\LG전자.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="CLEAR" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\CLEAR.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
